--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,9 @@
 *.db-*
 *.sass-cache
 *.orig
-config/config.ini
+*.json
+config/*
+!config/config.ini.example
 static/dist/
 node_modules/
 venv/
@@ -12,3 +14,4 @@ core
 src/
 _build
 _build_html
+beehive.*
